@@ -243,12 +243,12 @@ Public Const IL_KEEP_DXTC_DATA = &H70C
 Public Const IL_DXTC_DATA_FORMAT = &H70D
 
 ' Cube map definitions
-Public Const IL_CUBEMAP_POSITIVEX = &H00000400
-Public Const IL_CUBEMAP_NEGATIVEX = &H00000800
-Public Const IL_CUBEMAP_POSITIVEY = &H00001000
-Public Const IL_CUBEMAP_NEGATIVEY = &H00002000
-Public Const IL_CUBEMAP_POSITIVEZ = &H00004000
-Public Const IL_CUBEMAP_NEGATIVEZ = &H00008000
+Public Const IL_CUBEMAP_POSITIVEX = &H400
+Public Const IL_CUBEMAP_NEGATIVEX = &H800
+Public Const IL_CUBEMAP_POSITIVEY = &H1000
+Public Const IL_CUBEMAP_NEGATIVEY = &H2000
+Public Const IL_CUBEMAP_POSITIVEZ = &H4000
+Public Const IL_CUBEMAP_NEGATIVEZ = &H8000
 
 ' Values
 Public Const IL_VERSION_NUM = &HDE2
